Add empty components for each page. Add minimal header

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background: #ECEFF1;
+  /* background: #ECEFF1; */
   color: rgba(0,0,0,0.87);
   font-family: Roboto, Helvetica, Arial, sans-serif;
   margin: 10px 10px 10px 10px;
