--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
 body {
-  /* background: #ECEFF1; */
   color: rgba(0,0,0,0.87);
-  font-family: Roboto, Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
   margin: 10px 10px 10px 10px;
   height: 95vh;
+}
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
 }
