--- a/src/home/home.css
+++ b/src/home/home.css
@@ -9,12 +9,28 @@
     display: flex;
 }
 
+.homeElement {
+    margin: auto;
+}
+
 .description {
     margin: auto 0 auto 5rem;
 }
 
-@media(max-width: 1000px) {
+@media(max-width: 62.5em) {
     .description {
         margin: auto 0 auto 1rem;
+    }
+}
+
+@media(max-width: 43.75em) {
+    .home {
+        display: block;
+    }
+    .photo {
+        height: 150px;
+        width: 150px;
+        display: block;
+        margin-bottom: 2rem;
     }
 }
