--- a/src/portfolio/portfolio.css
+++ b/src/portfolio/portfolio.css
@@ -1,7 +1,7 @@
 .icon {
-    height: 40px;
-    width: 40px;
-    margin-right: 20px;
+    height: 2.5rem;
+    width: 2.5rem;
+    margin-right: 1rem;
 }
 
 .cards {
@@ -10,5 +10,6 @@
 }
 
 .card {
-    width: 12rem;
+    width: 10.5rem;
+    margin-right: 1.5rem;
 }
