--- a/src/header/header.css
+++ b/src/header/header.css
@@ -13,5 +13,11 @@
 
 .header {
     text-align: center;
-    margin: 40px auto;
+    margin: 0 auto;
+    position: fixed;
+    overflow: hidden;
+    top: 0;
+    width: 100%;
+    background-color: white;
+    padding: 2.5rem 0 0.5rem 0;
 }
